--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,51 +4,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
-    {% include head-custom.html %}
   </head>
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
-
         {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" />
+        <div style="text-align: center;">
+          <img src="{{site.logo | relative_url}}" alt="Curlin" style="width: 70%;" />
+        </div>
         {% endif %}
 
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
+        <!-- Add content from a page -->
+        {{ site.description }}
 
-        {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-        {% endif %}
-
-        {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
-
-        {% if site.show_downloads %}
-        <ul class="downloads">
-          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
-        </ul>
-        {% endif %}
+        <!-- Add social links -->
+        <style>
+          .social-icon {
+            width: 30px;
+            height: 30px;
+            margin: 0 10px;
+            filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(0%) contrast(100%);
+            transition: filter 0.3s;
+          }
+        </style>
+        <div style="text-align: center; margin-top: 20px;">
+          <a href="https://github.com/{{ site.social.github }}" target="_blank" class="social-link">
+            <img src="/assets/icon/github.png" alt="GitHub" class="social-icon">
+          </a>
+          <a href="https://linkedin.com/in/{{ site.social.linkedin }}" target="_blank" class="social-link">
+            <img src="/assets/icon/li.png" alt="LinkedIn" class="social-icon">
+          </a>
+        </div>
+          
       </header>
       <section>
 
+        <h1 style="text-align: left;"><a href="{{ "/" | absolute_url }}">{{ site.title }}</a></h1>
       {{ content }}
 
       </section>
       <footer>
-        {% if site.github.is_project_page %}
-        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %}
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <!-- <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p> -->
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
