--- a/layouts/shortcodes/carousel.html
+++ b/layouts/shortcodes/carousel.html
@@ -40,7 +40,6 @@
 }
 
 .carousel-slide img {
-  width: 35%;
   object-fit: cover;
   display: block;
 }
@@ -74,7 +73,7 @@
       <div class="carousel-item">
         <img src="{{ $src }}"
              alt="{{ $caption }}"
-             style="width:{{ $width }};max-width:100%;max-height:100%;object-fit:cover;display:block;margin:0 auto;" />
+             style="max-width:100%; max-height:100%; width:auto; height:100%; object-fit:contain; display:block; margin:0 auto;" />
         <div class="carousel-caption">{{ $caption }}</div>
       </div>
     {{ end }}
