--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -53,6 +53,7 @@
 
 {{- partial "publications.html" . }}
 {{- partial "unpublished.html" . }}
+{{- partial "service.html" . }}
 
 {{- $term := .Data.Term }}
 {{- range $index, $page := $paginator.Pages }}
