--- a/assets/css/common/custom.css
+++ b/assets/css/common/custom.css
@@ -2,6 +2,10 @@ a[href="/abstracts/"]:hover {
   text-decoration: underline;
 }
 
+h3 {
+  margin-bottom: 0.5rem;
+}
+
 .pub-links a {
   display: flex;
   align-items: center;
@@ -124,8 +128,10 @@ a[href="/abstracts/"]:hover {
 
 /* Post-entry */
 
-.first-entry {
-    margin: -2rem 0 0 0 !important;
+.entry, .entry * {
+  text-overflow: unset !important;
+  overflow: visible !important;
+  -webkit-line-clamp: unset !important;
 }
 
 .entry-content div[style*="display:flex"] {
@@ -140,6 +146,19 @@ a[href="/abstracts/"]:hover {
   white-space: normal !important;
   overflow: visible !important;
   text-overflow: unset !important;
+  
+}
+
+/* Better bullet alignment */
+.entry-content ul,
+.entry-content ol,
+.post-content ul,
+.post-content ol {
+  padding-left: 1rem;
+}
+
+.entry-content a:hover {
+  text-decoration: underline;
 }
 
 b,
