--- a/layouts/partials/unpublished.html
+++ b/layouts/partials/unpublished.html
@@ -1,17 +1,14 @@
 {{ with site.GetPage "unpublished" }}
-<article class="first-entry publication-info" >
+<article class="entry publication-info" >
     <header class="entry-header">
         <h1>{{ .Title | markdownify }}</h1>
     </header>
     <div style="display: flex; align-items: center; gap: 2rem;">
         <div class="entry-content" style="flex: 1;">
-            {{ .Content }}
-            <footer class="entry-footer" style="margin-top: 1rem;">
-            </footer>
-            
+            {{ .Content }}          
         </div>
     </div>
-    <div class="more-link" style="margin-top: -1em;">
+    <div class="more-link" style="margin-top: -0.5em;">
     <a href="/unpub/">More &rarr;</a>
     </div>
 </article>
