--- a/assets/css/common/custom.css
+++ b/assets/css/common/custom.css
@@ -2,7 +2,7 @@ a[href="/abstracts/"]:hover {
   text-decoration: underline;
 }
 
-h3 {
+h3, h2 {
   margin-bottom: 0.5rem;
 }
 
@@ -42,7 +42,7 @@ h3 {
 }
 
 .main {
-    max-width: calc(var(--main-width) + var(--gap) * 3.5) !important;
+    max-width: calc(var(--main-width) + var(--gap) * 3.75) !important;
 }
 
 .social-icons a:hover svg,
