--- a/layouts/partials/home_info.html
+++ b/layouts/partials/home_info.html
@@ -1,6 +1,6 @@
 {{ with site.GetPage "homeinfo" }}
 <article class="home-info">
-    <header class="entry-header">
+    <header class="entry-header" style="margin-top: -1rem;">
         <h1>{{ .Title | markdownify }}</h1>
     </header>
     <div style="display: flex; align-items: center; gap: 2rem;">
