--- a/layouts/partials/service.html
+++ b/layouts/partials/service.html
@@ -1,6 +1,6 @@
 {{ with site.GetPage "service" }}
 <article class="entry">
-    <header class="entry-header">
+    <header class="entry-header" style="margin-top: 0.5rem;">
         <h1>{{ .Title | markdownify }}</h1>
     </header>
     <div style="display: flex; align-items: center; gap: 2rem;">
