--- a/layouts/_default/pub-page.html
+++ b/layouts/_default/pub-page.html
@@ -1,4 +1,5 @@
 {{ define "main" }}
+{{- partial "breadcrumbs.html" . }}
 <article class="post single pub-page">
     <header class="post-header">
         <h1 class="post-title">{{ .Title }}</h1>
