--- a/layouts/_default/pub-page.html
+++ b/layouts/_default/pub-page.html
@@ -1,10 +1,10 @@
 {{ define "main" }}
 {{- partial "breadcrumbs.html" . }}
-<article class="post single pub-page">
+<article class="pub-page">
     <header class="post-header">
         <h1 class="post-title">{{ .Title }}</h1>
     </header>
-    <div class="post-content">
+    <div class="post-content pub-page">
         {{ .Content }}
     </div>
 </article>
